--- a/web-develop/404-not-found/style.css
+++ b/web-develop/404-not-found/style.css
@@ -98,13 +98,34 @@ h1, h2, p{
   font-weight: 700;
 }
 
-@media only screen and (max-width:1300px){
+@media only screen and (max-width:1200px){
+  #main{
+    column-gap: 5rem;
+  }
+
+  #error-text h2{
+    font-size: 5.6rem;
+    line-height: 8rem;
+  }
+
+  #error-text p{
+    font-size: 2.2rem;
+    line-height: 3rem;
+    width: 100% ;
+  }
+  
+}
+
+@media only screen and (max-width:1024px){
   :root{
     --padding-sides: 2.4rem;
   }
+  body{
+    gap: 5rem;
+  }
 
   #main{
-    grid-template-columns: 1fr;
+    display: block;
   }
 
   #error-text h2{
